--- a/web/user/templates/user/password_change.html
+++ b/web/user/templates/user/password_change.html
@@ -1,14 +1,16 @@
 {% extends 'main/base.html' %}
 
 {% block content %}
-<div class='row'>
-    <div class='col-md-4 col-10  mx-auto'>
-    <h1>Cambiar Contraseña</h1>
-        <form method='post' action=''>{% csrf_token %}
-           {{ form.as_p }}
-        <span style='margin-bottom: 12px;'></span>
-        <button type="submit" class='btn btn-block btn-info'>Guardar</button>
-        </form>
-      </div>
+<div class="container">
+	<div class="card mx-auto" style="width:30em;">
+		<div class="card-body">
+			<h5 class="card-title">Cambiar contraseña</h5>
+			<form method='post' action=''>{% csrf_token %}
+				{{ form.as_p }}
+				<span style='margin-bottom: 12px;'></span>
+				<button type="submit" class='btn btn-block btn-info'>Guardar</button>
+			</form>
+	    </div>
+  	</div>
 </div>
 {% endblock %}
