--- a/web/create/templates/create/index.html
+++ b/web/create/templates/create/index.html
@@ -1,44 +1,39 @@
 {% extends "main/base.html" %}
+
 {% load static %}
-{% block head %}
-  <link rel="stylesheet" href="{% static 'create/css/create.css' %}">
-{% endblock head %}
 
 {% block content %}
 
-<div class="container">
-<div class="card-body">
-
-  <form class="needs-validation" action="/create/" method="post" id="form_create" data-commune-url="{% url 'ajax_load_communes' %}" novalidate>
-    {% csrf_token %}
-    <div class="form-group row" id="propertyType">
-      <div class="col-md-2">
-        {{form_create.propertyType_create.label_tag}}
-        {{form_create.propertyType_create}}
+<div class="container" style="max-width:100%">
+  <div class="card-body">
+    <form class="needs-validation" action="/create/" method="post" id="form_create" data-commune-url="{% url 'ajax_load_communes' %}" novalidate>
+     {% csrf_token %}
+     <div class="form-group row">
+      <div class="col-md-2 text-right">
+        <p class="font-weight-bold">Solicitud</p>
       </div>
-            <div class="col-md-2">
-        {{form_create.tipoTasacion_create.label_tag}}
-        {{form_create.tipoTasacion_create}}
+      <div class="col-md-6" id="petitioner">
+        <label>Institución</label>
+        {{form_create.solicitante_create}}
+      </div>
+      <div class="col-md-2">
+        <label>Código</label>
+        {{form_create.solicitanteCodigo_create}}
       </div>
     </div>
     <div class="form-group row">
-       <div class="col-md-3">
-          {{form_create.cliente_create.label_tag}}
-          {{form_create.cliente_create}}
+      <div class="col-md-2 text-right">
+        <p class="font-weight-bold">Cliente</p>
       </div>
-       <div class="col-md-3">
-          {{form_create.clienteRut_create.label_tag}}
-          {{form_create.clienteRut_create}}
+      <div class="col-md-6">
+        <label>Nombre</label>
+        {{form_create.cliente_create}}
       </div>
-      <div class="col-md-2" id="petitioner">
-        {{form_create.solicitante_create.label_tag}}
-        {{form_create.solicitante_create}}
+      <div class="col-md-2">
+        <label>Rut</label>
+        {{form_create.clienteRut_create}}
       </div>
-        <div class="col-md-2">
-        {{form_create.solicitanteCodigo_create.label_tag}}
-        {{form_create.solicitanteCodigo_create}}
-      </div>
-            <div class="col-md-2" id="other" hidden>
+      <div class="col-md-2" id="other" hidden>
         {{form_create.solicitanteOther_create.label_tag}}
         <div class="input-group">
           {{form_create.solicitanteOther_create}}
@@ -49,106 +44,120 @@
       </div>
     </div>
 
-    <div class="form-group row">
-      <div class="col-md-3">
-        {{form_create.addressRegion_create.label_tag}}
-        {{form_create.addressRegion_create}}
-        <div class="invalid-feedback">
-          Elija región.
-        </div>
+    <div class="form-group row" id="propertyType">
+      <div class="col-md-2 text-right">
+        <p class="font-weight-bold">Propiedad</p>
       </div>
       <div class="col-md-2">
-        {{form_create.addressCommune_create.label_tag}}
-        {{form_create.addressCommune_create}}
-        <div class="invalid-feedback">
-          Elija comuna.
-        </div>
+        <label>Tipo</label>
+        {{form_create.propertyType_create}}
       </div>
-      <div class="col-md-3">
-        {{form_create.addressStreet_create.label_tag}}
-        <div class="input-group">
-          {{form_create.addressStreet_create}}
-          <div class="invalid-feedback">
-            Por favor, ingrese una calle.
-          </div>
-        </div>
-      </div>
-      <div class="col-md-1">
-        {{form_create.addressNumber_create.label_tag}}
-        <div class="input-group">
-          {{form_create.addressNumber_create}}
-          <div class="invalid-feedback">
-            Falta #
-          </div>
-        </div>
-      </div>
-      <div class="col-md-1" id="type" hidden>
-        {{form_create.addressNumberFlat_create.label_tag}}
-        <div class="input-group">
-          {{form_create.addressNumberFlat_create}}
-          <div class="invalid-feedback">
-            Falta #
-          </div>
-        </div>
+      <div class="col-md-2">
+        <label>Tasación</label>
+        {{form_create.tipoTasacion_create}}
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-md-3">
-        <div class="form-group">
-          {{form_create.appraisalTimeFrame_create.label_tag}}
-          <div class="input-group date" id="datetimepicker1" data-target-input="nearest">
-            {{form_create.appraisalTimeFrame_create}}
-            <div class="input-group-append" data-target="#datetimepicker1" data-toggle="datetimepicker">
-              <div class="input-group-text"><i class="fa fa-calendar"></i></div>
-            </div>
-            <div class="invalid-feedback">
-              Ingresar fecha de envio
-            </div>
-          </div>
-        </div>
-      </div>
-      <script type="text/javascript">
-        $(function () {
-          $('#datetimepicker1').datetimepicker({
-                locale: 'es',
-                icons: {
-                    time: "far fa-clock",
-                    date: "far fa-calendar-alt",
-                    up: "fas fa-arrow-up",
-                    down: "fas fa-arrow-down"
-                }
-            });
-        });
-      </script>
+    <div class="form-group row">
+     <div class="col-md-3">
+      {{form_create.addressRegion_create.label_tag}}
+      {{form_create.addressRegion_create}}
+      <div class="invalid-feedback">
+       Elija región.
+     </div>
+   </div>
+   <div class="col-md-2">
+     {{form_create.addressCommune_create.label_tag}}
+     {{form_create.addressCommune_create}}
+     <div class="invalid-feedback">
+      Elija comuna.
     </div>
+  </div>
+  <div class="col-md-3">
+   {{form_create.addressStreet_create.label_tag}}
+   <div class="input-group">
+    {{form_create.addressStreet_create}}
+    <div class="invalid-feedback">
+     Por favor, ingrese una calle.
+   </div>
+ </div>
+</div>
+<div class="col-md-1">
+ {{form_create.addressNumber_create.label_tag}}
+ <div class="input-group">
+  {{form_create.addressNumber_create}}
+  <div class="invalid-feedback">
+   Falta #
+ </div>
+</div>
+</div>
+<div class="col-md-1" id="type" hidden>
+ {{form_create.addressNumberFlat_create.label_tag}}
+ <div class="input-group">
+  {{form_create.addressNumberFlat_create}}
+  <div class="invalid-feedback">
+   Falta #
+ </div>
+</div>
+</div>
+</div>
 
-    <div class="form-group row">
-      <div class="col-md-2">
-        {{form_create.appraisalPrice_create.label_tag}}
-        <div class="input-group">
-          {{form_create.appraisalPrice_create}}
-          <div class="input-group-append">
-            <div class="input-group-text">UF</div>
-          </div>
-          <div class="invalid-feedback">
-            Ingresar precio
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="form-group row">
-      <div class="col-md-2">
-        <button class="btn btn-primary btn-block align-bottom">Crear</button>
-      </div>
-    </div>
-  </form>
+<div class="row">
+ <div class="col-md-3">
+  <div class="form-group">
+   {{form_create.appraisalTimeFrame_create.label_tag}}
+   <div class="input-group date" id="datetimepicker1" data-target-input="nearest">
+    {{form_create.appraisalTimeFrame_create}}
+    <div class="input-group-append" data-target="#datetimepicker1" data-toggle="datetimepicker">
+     <div class="input-group-text"><i class="fa fa-calendar"></i></div>
+   </div>
+   <div class="invalid-feedback">
+     Ingresar fecha de envio
+   </div>
+ </div>
+</div>
+</div>
+<script type="text/javascript">
+ $(function () {
+  $('#datetimepicker1').datetimepicker({
+   locale: 'es',
+   icons: {
+     time: "far fa-clock",
+     date: "far fa-calendar-alt",
+     up: "fas fa-arrow-up",
+     down: "fas fa-arrow-down"
+   }
+ });
+});
+</script>
+</div>
+
+<div class="form-group row">
+ <div class="col-md-2">
+  {{form_create.appraisalPrice_create.label_tag}}
+  <div class="input-group">
+   {{form_create.appraisalPrice_create}}
+   <div class="input-group-append">
+    <div class="input-group-text">UF</div>
+  </div>
+  <div class="invalid-feedback">
+    Ingresar precio
+  </div>
+</div>
+</div>
+</div>
+<div class="form-group row">
+ <div class="col-md-2">
+  <button class="btn btn-primary btn-block align-bottom">Crear</button>
+</div>
+</div>
+</form>
 
 </div>
 </div>
 
 <script>
-  $("#id_addressRegion_create").change(function () {
+ $("#id_addressRegion_create").change(function () {
     // get the url of the `load_cities` view
     var url = $("#form_create").attr("data-commune-url");
     // get the selected country ID from the HTML input
@@ -161,9 +170,9 @@
       url: url,
       // add the country id to the GET parameters
       data: {
-        'region': regionId
-      },
-      success: function (data) {
+       'region': regionId
+     },
+     success: function (data) {
         // `data` is the return of the `load_cities` view function
         // replace the contents of the city input with the data that came from the server
         console.log(data)
@@ -174,60 +183,60 @@
 </script>
 
 <script>
-  jQuery('#propertyType').on('change', function() {
-    var type = $("#propertyType option:selected");
-    console.log(type.val())
-        if (type.val() == 2) {
-          $("#type").removeAttr('hidden');
-          $("#type").show();
-          $("#type").val('');
-          $("#type").attr('required','required');
-          $("#type").removeAttr('disabled');
-          $("#id_addressNumberFlat_create").removeAttr('disabled');
-          }
-        else {
-          $("#type").hide();
-          $("#type").removeAttr('required','required');
-        }
-  });
+ jQuery('#propertyType').on('change', function() {
+  var type = $("#propertyType option:selected");
+  console.log(type.val())
+  if (type.val() == 2) {
+   $("#type").removeAttr('hidden');
+   $("#type").show();
+   $("#type").val('');
+   $("#type").attr('required','required');
+   $("#type").removeAttr('disabled');
+   $("#id_addressNumberFlat_create").removeAttr('disabled');
+ }
+ else {
+   $("#type").hide();
+   $("#type").removeAttr('required','required');
+ }
+});
 </script>
 
 <script>
 // Example starter JavaScript for disabling form submissions if there are invalid fields
 (function() {
-  'use strict';
-  window.addEventListener('load', function() {
+ 'use strict';
+ window.addEventListener('load', function() {
     // Fetch all the forms we want to apply custom Bootstrap validation styles to
     var forms = document.getElementsByClassName('needs-validation');
     // Loop over them and prevent submission
     var validation = Array.prototype.filter.call(forms, function(form) {
       form.addEventListener('submit', function(event) {
-        if (form.checkValidity() === false) {
-          event.preventDefault();
-          event.stopPropagation();
-        }
-        form.classList.add('was-validated');
-      }, false);
+       if (form.checkValidity() === false) {
+        event.preventDefault();
+        event.stopPropagation();
+      }
+      form.classList.add('was-validated');
+    }, false);
     });
   }, false);
 })();
 </script>
 
 <script>
-  jQuery('#petitioner').on('change', function() {
-    var object = $("#petitioner option:selected");
-    console.log(object.val());
-    if (object.val() == 0 ) {
-        jQuery('#other').removeAttr('hidden');
-        jQuery('#other').show();
-        jQuery('#other').attr('required','required');
+ jQuery('#petitioner').on('change', function() {
+  var object = $("#petitioner option:selected");
+  console.log(object.val());
+  if (object.val() == 0 ) {
+    jQuery('#other').removeAttr('hidden');
+    jQuery('#other').show();
+    jQuery('#other').attr('required','required');
 
-    }
-    else {
-        jQuery('#other').hide();
-        jQuery('#other').removeAttr('required');
-        jQuery('#other').val('');
-    }
+  }
+  else {
+    jQuery('#other').hide();
+    jQuery('#other').removeAttr('required');
+    jQuery('#other').val('');
+  }
 });
 </script>
 
