--- a/web/home/templates/home/index.html
+++ b/web/home/templates/home/index.html
@@ -1,15 +1,23 @@
 {% extends "main/base.html" %}
+
 {% load static %}
-{% block head %}
-        <link rel="stylesheet" href="{% static 'main/css/main.css' %}">
-{% endblock %}
 
 {% block content %}
 
-<div class="section">
-  <div class="section-title">
-    <h2>Welcome</h2>
-  </div>
+<div class="jumbotron">	
+	<div class="row">
+		<div class="col-1">
+		</div>
+			<div class="col-7">
+			<h1 class="display-4 mt-5">Tasaciones centralizadas</h1>
+			<p class="lead"> Tasador es una plataforma para realizar tasaciones. Encuentre los datos que necesita, realize sus informes y exporte en los formatos que requiera. </p>
+		</div>
+		<div class="col-3">
+			{% include "login_form.html" %}
+		</div>
+		<div class="col-1">
+		</div>
+	</div>
 </div>
 
 {% endblock %}
