--- a/web/home/templates/registration/login.html
+++ b/web/home/templates/registration/login.html
@@ -1,12 +1,13 @@
 {% extends 'main/base.html' %}
 
 {% block content %}
+
 <div class="card">
   <div class="card-header">
     Login
   </div>
   <div class="card-body">
-    <form method="post">
+    <form method="post" action="/home/">
       {% csrf_token %}
       <div class="form-group">
         <label for="">Username</label>
