--- a/web/main/templates/main/footer.html
+++ b/web/main/templates/main/footer.html
@@ -1,5 +1,7 @@
 <div id="footer">
-  <p>Tasador ProTasa, alpha 0.01, {% now "jS F Y H:i" %}</p>
+	<div class="container">
+		<p><small>© Data Urbana SpA (a0.01) {% now "jS F Y" %}</small></p>
+	</div>
 </div>
 <script>
   $(document).ready(function() {
