--- a/web/main/templates/main/header.html
+++ b/web/main/templates/main/header.html
@@ -1,5 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="/main/">Tasador ProTasa</a>
+  <div class="container">
+  {% if user.is_authenticated %}
+  <a class="navbar-brand" href="/main/">Tasador</a>
+  {% else %}
+  <a class="navbar-brand" href="/">Tasador</a>
+  {% endif %}
+  
   {% if user.is_authenticated %}
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -25,12 +31,10 @@
     <div class="navbar-text" style="margin-right:1em">
     <a href="/user/profile/">Perfil</a>
   </div>
-  <div class="navbar-text" style="margin-right:1em">
-    <a href="/user/password_change/">Cambiar Contraseña</a>
-  </div>
   <div class="navbar-text">
     <a href="/logout/">Logout</a>
   </div>
   {% endif %}
 
+  </div>
 </nav>
