--- a/web/user/templates/user/login.html
+++ b/web/user/templates/user/login.html
@@ -7,26 +7,18 @@
 <h3>Sistema de Tasación Automático</h3>
 
 {% else %}
-<div class="card">
-  <div class="card-header">
-    Login
-  </div>
-  <div class="card-body">
-    <form method="post">
-      {% csrf_token %}
-      <div class="form-group">
-        <label for="">Username</label>
-        {{form.username}}
-      </div>
-      <div class="form-group">
-        <label for="">Password</label>
-        {{form.password}}
-      </div>
-      <button type="submit" class="btn btn-primary">Login</button>
-    </form>
+
+<div class="jumbotron">
+  <div class="row">
+    <div class="col-md-8">
+      <h1 class="mt">Necesita estar registrado para ver esta página</h1>
+    </div>
+    <div class="col-md-4">
+      {% include "login_form.html" %}
+    </div>
   </div>
 </div>
-<p><a href="{% url 'user:password_reset' %}">Olvidó la contraseña</a></p>
+
 {% endif %}
 {% endblock %}
 
