create form casi listo y appraisal form casi listo

--- a/web/appraisal/templates/appraisal/realestate_general.html
+++ b/web/appraisal/templates/appraisal/realestate_general.html
@@ -1,5 +1,28 @@
   <div class="card-body">
 
+     <span class="form-group row align-middle">
+      <div class="col-12">
+        <label class="col-form-label">Tasación</label>
+      </div>
+      <div class="col-auto">
+        <label for="tasacion" class="col-form-label-sm">
+          Tipo de Tasacion
+        </label>
+      </div>
+      <div class="col-lg-3">
+        {{forms.appraisal.tipoTasacion}}
+      </div>
+      <div class="col-auto">
+        <label for="tasacion" class="col-form-label-sm">
+          Objetivo de la Tasacion
+        </label>
+      </div>
+      <div class="col-lg-3">
+        {{forms.appraisal.objetivo}}
+      </div>
+    </span>
+
+
     <span class="form-group row align-middle">
       <div class="col-12">
         <label class="col-form-label">Visador</label>
