--- a/web/create/templates/create/index.html
+++ b/web/create/templates/create/index.html
@@ -93,6 +93,10 @@
                <label>Tasación</label>
                {{form_create.tipoTasacion_create}}
             </div>
+            <div class="col-md-2">
+               <label>Objetivo Tasación</label>
+               {{form_create.objetivo_create}}
+            </div>
          </div>
 
       <div class="form-group row">
