--- a/web/create/templates/create/index.html
+++ b/web/create/templates/create/index.html
@@ -38,7 +38,7 @@
                         <div class="input-group-text"><i class="fa fa-calendar"></i></div>
                      </div>
                      <div class="invalid-feedback">
-                        Ingresar fecha de envio
+                        Falta ingresar fecha de envio
                      </div>
                   </div>
                </div>
@@ -102,14 +102,14 @@
             {{form_create.addressRegion_create.label_tag}}
             {{form_create.addressRegion_create}}
             <div class="invalid-feedback">
-               Elija región.
+               Falta región.
             </div>
          </div>
          <div class="col-md-2">
             {{form_create.addressCommune_create.label_tag}}
             {{form_create.addressCommune_create}}
             <div class="invalid-feedback">
-               Elija comuna.
+               Falta comuna.
             </div>
          </div>
       
@@ -128,7 +128,7 @@
             <div class="input-group">
                {{form_create.addressNumber_create}}
                <div class="invalid-feedback">
-                  Falta #
+                  Falta número
                </div>
             </div>
          </div>
@@ -161,12 +161,12 @@
       </div>
       -->
       
-      <div class="form-group row">
-            <div class="col-md-2">
-            </div>
-            <div class="col-md-8">
-               <button class="btn btn-dark btn-block align-bottom">Crear</button>
-            </div>
+      <div class="form-group row mt-4">
+         <div class="col-md-2">
+         </div>
+         <div class="col-md-8">
+            <button class="btn btn-dark btn-block align-bottom">Crear</button>
+         </div>
       </div>
 
    </form>
