--- a/web/appraisal/templates/appraisal/realestate_general.html
+++ b/web/appraisal/templates/appraisal/realestate_general.html
@@ -94,23 +94,26 @@
           Nombre
         </label>
       </div>
-        <div class="col-lg-2">
+        <div class="col-lg-3">
           {{forms.appraisal.solicitante}}
       </div>
-        <div class="col-auto">
+      <div class="col-auto">
         <label for="solicitante" class="col-form-label-sm">
-          Código Solicitante
+          Código
         </label>
       </div>
       <div class="col-lg-2">
           {{forms.appraisal.solicitanteCodigo}}
       </div>
+    </span>
+
+    <span class="form-group row align-middle">
       <div class="col-auto">
         <label for="solicitante" class="col-form-label-sm">
           Sucursal
         </label>
       </div>
-      <div class="col-lg-1">
+      <div class="col-lg-3">
         {{forms.appraisal.solicitanteSucursal}}
       </div>
       <div class="col-auto">
@@ -118,7 +121,7 @@
           Ejecutivo
         </label>
       </div>
-      <div class="col-lg-2">
+      <div class="col-lg-3">
         {{forms.appraisal.solicitanteEjecutivo}}
       </div>
     </span>
