--- a/web/appraisal/templates/appraisal/realestate_property.html
+++ b/web/appraisal/templates/appraisal/realestate_property.html
@@ -161,7 +161,12 @@
         {{forms.building.avaluoFiscal.label}}
       </div>
       <div class="col-lg-3">
-        {{forms.building.avaluoFiscal}}
+        <div class="input-group input-group-sm">
+          {{forms.building.avaluoFiscal}}
+          <div class="input-group-append">
+            <div class="input-group-text">$</div>
+          </div>
+        </div>
       </div>
     </div>
 
